# norgdo

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  main.rs  parser.rs  task.rs  task_manager.rs  ui.rs
