[package]
name = "norgdo"
version = "0.1.0"
edition = "2024"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com"]
license = "GPL-2.0"
readme = "README.md"
description = "Get your tasks done using Norg, straight from your terminal"
repository = "https://github.com/NTBBloodbath/norgdo"
keywords = ["norg", "task management"]

include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
